2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c: (gst_deinterlace2_init),
	(gst_greatest_common_divisor), (gst_fraction_double),
	(gst_deinterlace2_getcaps), (gst_deinterlace2_setcaps):
	Don't use proxy_getcaps() but implement our own getcaps() function
	that doubles/halfs the framerate if all fields should be sent out.

2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* ext/Makefile.am:
	* ext/twolame/Makefile.am:
	* ext/twolame/gsttwolame.c: (gst_two_lame_mode_get_type),
	(gst_two_lame_padding_get_type), (gst_two_lame_emphasis_get_type),
	(gst_two_lame_release_memory), (gst_two_lame_finalize),
	(gst_two_lame_base_init), (gst_two_lame_class_init),
	(gst_two_lame_src_setcaps), (gst_two_lame_sink_setcaps),
	(gst_two_lame_init), (gst_two_lame_set_property),
	(gst_two_lame_get_property), (gst_two_lame_sink_event),
	(gst_two_lame_chain), (gst_two_lame_setup),
	(gst_two_lame_change_state), (gst_two_lame_get_default_settings),
	(plugin_init):
	* ext/twolame/gsttwolame.h:
	Add TwoLAME MP2 encoding element, based on the LAME element.

2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* ext/Makefile.am:
	* ext/celt/Makefile.am:
	* ext/celt/gstcelt.c: (plugin_init):
	* ext/celt/gstceltdec.c: (gst_celt_dec_base_init),
	(gst_celt_dec_class_init), (gst_celt_dec_reset),
	(gst_celt_dec_init), (celt_dec_convert),
	(celt_get_sink_query_types), (celt_dec_sink_query),
	(celt_get_src_query_types), (celt_dec_src_query),
	(celt_dec_src_event), (celt_dec_sink_event),
	(celt_dec_chain_parse_header), (celt_dec_chain_parse_comments),
	(celt_dec_chain_parse_data), (celt_dec_chain),
	(celt_dec_change_state):
	* ext/celt/gstceltdec.h:
	* ext/celt/gstceltenc.c: (gst_celt_enc_setup_interfaces),
	(gst_celt_enc_base_init), (gst_celt_enc_class_init),
	(gst_celt_enc_finalize), (gst_celt_enc_sink_setcaps),
	(gst_celt_enc_sink_getcaps), (gst_celt_enc_convert_src),