@@ -96,9 +96,7 @@ gst_deinterlace2_methods_get_type (void)
   static GType deinterlace2_methods_type = 0;
 
   static const GEnumValue methods_types[] = {
-#if 0
     {GST_DEINTERLACE2_TOMSMOCOMP, "Toms Motion Compensation", "tomsmocomp"},
-#endif
     {GST_DEINTERLACE2_GREEDY_H, "Greedy High Motion", "greedyh"},
     {GST_DEINTERLACE2_GREEDY_L, "Greedy Low Motion", "greedyl"},
     {GST_DEINTERLACE2_VFIR, "Vertical Blur", "vfir"},
@@ -216,11 +214,9 @@ gst_deinterlace2_set_method (GstDeinterlace2 * self,
   }
 
   switch (method) {
-#if 0
     case GST_DEINTERLACE2_TOMSMOCOMP:
       self->method = g_object_new (GST_TYPE_DEINTERLACE_TOMSMOCOMP, NULL);
       break;
-#endif
     case GST_DEINTERLACE2_GREEDY_H:
       self->method = g_object_new (GST_TYPE_DEINTERLACE_GREEDY_H, NULL);
       break;
@@ -276,7 +272,8 @@ gst_deinterlace2_class_init (GstDeinterlace2Class * klass)
           "Method",
           "Deinterlace Method",
           GST_TYPE_DEINTERLACE2_METHODS,
-          GST_DEINTERLACE2_GREEDY_H, G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS)
+          GST_DEINTERLACE2_TOMSMOCOMP,
+          G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS)
       );
 
   g_object_class_install_property (gobject_class, ARG_FIELDS,
